--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ nav {
     flex-direction: column;
     align-items: end;
     list-style: none;
-    padding: 2.5vh 8vw;
+    padding: 3.5vh 8vw;
     font-size: 1.8vh;
 }
 
@@ -32,7 +32,7 @@ li::after {
     width: 10px;
     position: absolute;
     border-radius: 50%;
-    margin: 1vh 4vw;
+    margin: 0.7vh 3vw;
 }
 
 nav {
@@ -54,9 +54,14 @@ h2 {
 /* Carousel */
 
 .carousel-inner {
-    height: 45vh;
-    width: 60vw;
+    height: 55vh;
+    width: 50vw;
     border-radius: 10px;
+}
+
+.carousel-img-custom {
+    height: 55vh;
+    width: 50vw;
 }
 
 .carousel-custom {
@@ -71,24 +76,39 @@ h5 {
 
 /* Cards */
 
+body {
+    background-color: rgb(168, 78, 241);
+}
+
 main {
     padding: 2vh 0;
-    background-color: rgba(216, 169, 255, 0.5);
 }
 
 .custom-card {
-    border: 2px solid black;
-    border-radius: 10px;
+    margin-bottom: 3vh;
 }
 
-.card-img-custom {
-    width: 33%;
+.card-body {
+    background-color: rgba(216, 169, 255, 0.5);
+    margin: 0;
 }
 
-@media screen and (max-width: 550px) {
+/* Media queries */
+
+@media screen and (max-width: 500px) {
     .carousel-inner {
-        height: 18vh;
-        width: 60vw;
-        border-radius: 10px;
+        height: 14vh;
+    }
+    .carousel-img-custom {
+        height: 30vh;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .carousel-inner {
+        height: 30vh;
+    }
+    .carousel-img-custom {
+        height: 35vh;
     }
 }
